<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_to_export"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/texto_exportar"
        />
    <item
        android:id="@+id/page_to_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_"
        android:title="@string/texto_home"
        />
    <item
        android:id="@+id/page_to_add"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_agregar"
        android:title="@string/texto_agregar"
        />
    <item
        android:id="@+id/page_to_Exit"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/texto_salir_app" />

</menu>