<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_hideable="true"
    app:behavior_peekHeight="@dimen/margen_minima"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".views.RutaFragment">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/CardViewMapa"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="@dimen/margen_minima"
        app:layout_constraintBottom_toTopOf="@id/cardViewIngresoDestino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margen_minima"
            android:apiKey="@string/google_maps_key"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewIngresoDestino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margen_minima"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margen_minima">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonContinuar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margen_minima"
                android:text="@string/continuar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewDuracion" />

            <TextView
                android:id="@+id/textViewDistancia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_texto"
                android:text="@string/text_view_distancia"
                android:textSize="@dimen/texto_principal"
                app:layout_constraintBottom_toBottomOf="@id/textViewDuracion"
                app:layout_constraintEnd_toStartOf="@id/textViewDuracion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/textViewDuracion" />

            <TextView
                android:id="@+id/textViewDuracion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_texto"
                android:text="@string/text_view_duracion"
                android:textSize="@dimen/texto_principal"
                app:layout_constraintBottom_toTopOf="@id/buttonContinuar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textViewDistancia"
                app:layout_constraintTop_toBottomOf="@id/InputDestino" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/InputOrigen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/origen"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:endIconDrawable="@drawable/ic_baseline_home_"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:helperText="@string/text_helper_ruta"
                app:layout_constraintBottom_toTopOf="@id/InputDestino"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputOrigenText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/InputDestino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/destino"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:endIconDrawable="@drawable/ic_baseline_ruta"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:helperText="@string/text_helper_ruta"
                app:layout_constraintBottom_toTopOf="@id/textViewDuracion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/InputOrigen">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputDestinoText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>

