<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoburbujas"
    android:theme="@style/Theme.StockerInv"
    app:behavior_peekHeight="@dimen/margen_minima"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".views.LoginFragment">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCrearCuentaGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margen_media"
        android:text="@string/crear_cuenta"
        android:textSize="@dimen/texto_boton_principal"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingresoGoogle" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/texto_checkbox"
        android:layout_margin="@dimen/margen_minima"
        android:textSize="@dimen/texto_terciario"
        android:textStyle="italic"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCrearCuentaGoogle" />

    <TextView
        android:id="@+id/textoOlvidoContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margen_grande"
        android:clickable="true"
        android:elevation="@dimen/margen_media"
        android:focusable="true"
        android:fontFamily="casual"
        android:layout_marginTop="@dimen/margen_media"
        android:foregroundGravity="center"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/margen_media"
        android:text="@string/slogan"
        android:textSize="@dimen/texto_grande"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ingresoGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/ingresoGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_margin="@dimen/margen_minima"
        android:text="@string/ingreso_con_google"
        app:layout_constraintBottom_toTopOf="@+id/btnCrearCuentaGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoOlvidoContraseña" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorTransparente"
        app:cardCornerRadius="0dp"
        android:layout_margin="@dimen/margen_media"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margen_minima">

            <TextView
                android:id="@+id/textAunSinCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margen_grande"
                android:gravity="center"
                android:text="@string/no_tienes_cuenta"
                android:textColor="@color/colorNegro"
                android:textSize="@dimen/texto_secundario"
                app:layout_constraintBottom_toTopOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margen_extrema"
                android:layout_marginTop="@dimen/margen_extrema"
                android:src="@android:drawable/arrow_down_float"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>
